unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/Customer_Story_Workflow_Requests__c.object-meta.xml
<CustomObject>
    <description>Reference Request from Reference Customer</description>
    <label>Reference Request</label>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>