unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>