unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Approximate_Date__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Date__c</fullName>
    <label>Approximate Date</label>
    <type>Date</type>
</CustomField>