unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Customer_Story__c.field-meta.xml
<CustomField>
    <fullName>Customer_Story__c</fullName>
    <label>Reference Number</label>
    <referenceTo>CustomerStory__c</referenceTo>
    <relationshipLabel>Reference Requests</relationshipLabel>
    <relationshipName>Customer_Story_Workflow_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>