unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Provide details on why and what your requirements from the reference are. Please enter NA if no details.</inlineHelpText>
    <label>Requirement Overview</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>