unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Referee_Level__c.field-meta.xml
<CustomField>
    <fullName>Referee_Level__c</fullName>
    <label>Referee Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>Dept. Head</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>