unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Reference_Customer__c.field-meta.xml
<CustomField>
    <fullName>Reference_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Updated from Reference Customer account automatically</inlineHelpText>
    <label>Reference Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Requests</relationshipLabel>
    <relationshipName>Reference_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>