unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Story_Owner__c.field-meta.xml
<CustomField>
    <fullName>Story_Owner__c</fullName>
    <formula>Customer_Story__r.Owner:User.FirstName &amp; &#39; &#39; &amp; Customer_Story__r.Owner:User.LastName</formula>
    <label>Reference Customer Owner</label>
    <type>Text</type>
</CustomField>