unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Communication Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Activity</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
                <label>Reference Call</label>
            </value>
            <value>
                <fullName>Visit</fullName>
                <label>Site Visit</label>
            </value>
            <value>
                <fullName>Tender Document</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>