unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/validationRules/Check_Reference_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Reference_Available</fullName>
    <active>true</active>
    <description>Reference Customer Status should be available</description>
    <errorConditionFormula>TEXT(Customer_Story__r.Status__c) &lt;&gt; &#39;Available&#39;</errorConditionFormula>
    <errorMessage>This reference customer is not available.</errorMessage>
</ValidationRule>