unpackaged/main/default/objects/Customer_Story_Workflow_Requests__c/validationRules/Contact_limit_number_reached.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_limit_number_reached</fullName>
    <active>true</active>
    <description>Contact limit number reached.</description>
    <errorConditionFormula>(Customer_Story__r.Approved_Request_Counter__c =  Customer_Story__r.Limit_contact_number__c ) &amp;&amp; Customer_Story__r.Limit_contact_number__c &gt;0</errorConditionFormula>
    <errorMessage>The contact limit number has been reached.</errorMessage>
</ValidationRule>